--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"bootstrap-icons": "^1.11.3",
 		"mongodb": "^6.11.0",
 		"multer": "^1.4.5-lts.1"
 	}
