--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"bootstrap-icons": "^1.11.3",
+		"chart.js": "^4.4.7",
 		"mongodb": "^6.11.0",
 		"multer": "^1.4.5-lts.1"
 	}
