--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"bootstrap-icons": "^1.11.3",
 		"chart.js": "^4.4.7",
+		"maplibre-gl": "^5.0.0",
 		"mongodb": "^6.11.0",
 		"multer": "^1.4.5-lts.1"
 	}
